/*
 * $Id: ChangeLog,v 1.2656 2004/03/25 21:23:38 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-25 14:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added missing extern declarations of Win32_OleInitialize() and Win32_OleUnInitialize()

2004-03-26 09:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/winprn/tprint.prg
    - Swapped dwUnderLine & dwItalic in call to CreateFont() in HB_FUNC( CREATEFONT )
        Thanks to Frank Demont

2004-03-25 20:30 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/filesys.c
    ! fixed setting FERROR() in hb_fsCommit() in *nix

2004-03-25 11:01 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
  * source/vm/hvm.c
    ! Fixed GPF related to OLE Shutdown sequence.
    % Optimized and simplified Init/Shutdown of OLE.

2004-03-25 20:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbf1.c
   ! fixed bug I introduce with my last commit. The DBF was not closed
     if there was no changes in it.

2004-03-25 08:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    ! Fixed 2 GPF traps related to ->pModuleSymbols

2004-03-25 10:30 UTC-0300 Luiz Rafael Culik Guimaraes<culikr@brturbo.com>
  * source/rtl/ttopbar.prg
    ! minor fix to additem method(fixes an bug reported by Guillermo Varona

2004-03-25 13:22 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrddcdx.h
  * xharbour/include/hbrdddbf.h
  * xharbour/include/hbrddntx.h
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
   * implemented logic to eliminate unnecessary hb_fsCommit() if dbf,